Update proto models for Turms servers