@@ -26,7 +26,7 @@ public final class GroupMembersWithVersionOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 GroupMembersWithVersionOuterClass.class.getName());
     }
@@ -62,7 +62,7 @@ public final class GroupMembersWithVersionOuterClass {
                                 .getDescriptor(),});
         internal_static_im_turms_proto_GroupMembersWithVersion_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_GroupMembersWithVersion_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_GroupMembersWithVersion_descriptor,
