@@ -26,7 +26,7 @@ public final class CreateGroupInvitationRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 CreateGroupInvitationRequestOuterClass.class.getName());
     }
@@ -49,22 +49,30 @@ public final class CreateGroupInvitationRequestOuterClass {
     static {
         java.lang.String[] descriptorData = {"\n>request/group/enrollment/create_group_"
                 + "invitation_request.proto\022\016im.turms.proto"
-                + "\"U\n\034CreateGroupInvitationRequest\022\020\n\010grou"
-                + "p_id\030\001 \001(\003\022\022\n\ninvitee_id\030\002 \001(\003\022\017\n\007conten"
-                + "t\030\003 \001(\tBH\nAim.turms.server.common.access"
-                + ".client.dto.request.group.enrollmentP\001\272\002"
-                + "\000b\006proto3"};
+                + "\032\030model/common/value.proto\"\207\001\n\034CreateGro"
+                + "upInvitationRequest\022\020\n\010group_id\030\001 \001(\003\022\022\n"
+                + "\ninvitee_id\030\002 \001(\003\022\017\n\007content\030\003 \001(\t\0220\n\021cu"
+                + "stom_attributes\030\017 \003(\0132\025.im.turms.proto.V"
+                + "alueBH\nAim.turms.server.common.access.cl"
+                + "ient.dto.request.group.enrollmentP\001\272\002\000b\006"
+                + "proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_CreateGroupInvitationRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_CreateGroupInvitationRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_CreateGroupInvitationRequest_descriptor,
-                        new java.lang.String[]{"GroupId", "InviteeId", "Content",});
+                        new java.lang.String[]{"GroupId",
+                                "InviteeId",
+                                "Content",
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
