@@ -26,7 +26,7 @@ public final class DeleteGroupInvitationRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 DeleteGroupInvitationRequestOuterClass.class.getName());
     }
@@ -49,21 +49,26 @@ public final class DeleteGroupInvitationRequestOuterClass {
     static {
         java.lang.String[] descriptorData = {"\n>request/group/enrollment/delete_group_"
                 + "invitation_request.proto\022\016im.turms.proto"
-                + "\"5\n\034DeleteGroupInvitationRequest\022\025\n\rinvi"
-                + "tation_id\030\001 \001(\003BH\nAim.turms.server.commo"
-                + "n.access.client.dto.request.group.enroll"
-                + "mentP\001\272\002\000b\006proto3"};
+                + "\032\030model/common/value.proto\"g\n\034DeleteGrou"
+                + "pInvitationRequest\022\025\n\rinvitation_id\030\001 \001("
+                + "\003\0220\n\021custom_attributes\030\017 \003(\0132\025.im.turms."
+                + "proto.ValueBH\nAim.turms.server.common.ac"
+                + "cess.client.dto.request.group.enrollment"
+                + "P\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_DeleteGroupInvitationRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_DeleteGroupInvitationRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_DeleteGroupInvitationRequest_descriptor,
-                        new java.lang.String[]{"InvitationId",});
+                        new java.lang.String[]{"InvitationId", "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
