@@ -26,7 +26,7 @@ public final class UpdateMessageRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 UpdateMessageRequestOuterClass.class.getName());
     }
@@ -48,23 +48,32 @@ public final class UpdateMessageRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n,request/message/update_message_request"
-                + ".proto\022\016im.turms.proto\"\201\001\n\024UpdateMessage"
-                + "Request\022\022\n\nmessage_id\030\001 \001(\003\022\021\n\004text\030\002 \001("
-                + "\tH\000\210\001\001\022\017\n\007records\030\003 \003(\014\022\030\n\013recall_date\030\004"
-                + " \001(\003H\001\210\001\001B\007\n\005_textB\016\n\014_recall_dateB?\n8im"
-                + ".turms.server.common.access.client.dto.r"
-                + "equest.messageP\001\272\002\000b\006proto3"};
+                + ".proto\022\016im.turms.proto\032\030model/common/val"
+                + "ue.proto\"\263\001\n\024UpdateMessageRequest\022\022\n\nmes"
+                + "sage_id\030\001 \001(\003\022\021\n\004text\030\002 \001(\tH\000\210\001\001\022\017\n\007reco"
+                + "rds\030\003 \003(\014\022\030\n\013recall_date\030\004 \001(\003H\001\210\001\001\0220\n\021c"
+                + "ustom_attributes\030\017 \003(\0132\025.im.turms.proto."
+                + "ValueB\007\n\005_textB\016\n\014_recall_dateB?\n8im.tur"
+                + "ms.server.common.access.client.dto.reque"
+                + "st.messageP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_UpdateMessageRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_UpdateMessageRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_UpdateMessageRequest_descriptor,
-                        new java.lang.String[]{"MessageId", "Text", "Records", "RecallDate",});
+                        new java.lang.String[]{"MessageId",
+                                "Text",
+                                "Records",
+                                "RecallDate",
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
