@@ -26,7 +26,7 @@ public final class QueryResourceDownloadInfoRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryResourceDownloadInfoRequestOuterClass.class.getName());
     }
@@ -40,8 +40,6 @@ public final class QueryResourceDownloadInfoRequestOuterClass {
 
     static final com.google.protobuf.Descriptors.Descriptor internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_descriptor;
     static final com.google.protobuf.GeneratedMessage.FieldAccessorTable internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_fieldAccessorTable;
-    static final com.google.protobuf.Descriptors.Descriptor internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_ExtraEntry_descriptor;
-    static final com.google.protobuf.GeneratedMessage.FieldAccessorTable internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_ExtraEntry_fieldAccessorTable;
 
     public static com.google.protobuf.Descriptors.FileDescriptor getDescriptor() {
         return descriptor;
@@ -51,39 +49,33 @@ public final class QueryResourceDownloadInfoRequestOuterClass {
     static {
         java.lang.String[] descriptorData = {"\n:request/storage/query_resource_downloa"
                 + "d_info_request.proto\022\016im.turms.proto\032$co"
-                + "nstant/storage_resource_type.proto\"\217\002\n Q"
-                + "ueryResourceDownloadInfoRequest\0221\n\004type\030"
-                + "\001 \001(\0162#.im.turms.proto.StorageResourceTy"
-                + "pe\022\023\n\006id_num\030\002 \001(\003H\000\210\001\001\022\023\n\006id_str\030\003 \001(\tH"
-                + "\001\210\001\001\022J\n\005extra\030\004 \003(\0132;.im.turms.proto.Que"
-                + "ryResourceDownloadInfoRequest.ExtraEntry"
-                + "\032,\n\nExtraEntry\022\013\n\003key\030\001 \001(\t\022\r\n\005value\030\002 \001"
-                + "(\t:\0028\001B\t\n\007_id_numB\t\n\007_id_strB?\n8im.turms"
-                + ".server.common.access.client.dto.request"
-                + ".storageP\001\272\002\000b\006proto3"};
+                + "nstant/storage_resource_type.proto\032\030mode"
+                + "l/common/value.proto\"\307\001\n QueryResourceDo"
+                + "wnloadInfoRequest\0221\n\004type\030\001 \001(\0162#.im.tur"
+                + "ms.proto.StorageResourceType\022\023\n\006id_num\030\002"
+                + " \001(\003H\000\210\001\001\022\023\n\006id_str\030\003 \001(\tH\001\210\001\001\0220\n\021custom"
+                + "_attributes\030\017 \003(\0132\025.im.turms.proto.Value"
+                + "B\t\n\007_id_numB\t\n\007_id_strB?\n8im.turms.serve"
+                + "r.common.access.client.dto.request.stora"
+                + "geP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
                 new com.google.protobuf.Descriptors.FileDescriptor[]{
                         im.turms.server.common.access.client.dto.constant.StorageResourceTypeOuterClass
+                                .getDescriptor(),
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
                                 .getDescriptor(),});
         internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_descriptor,
-                        new java.lang.String[]{"Type", "IdNum", "IdStr", "Extra",});
-        internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_ExtraEntry_descriptor =
-                internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_descriptor
-                        .getNestedTypes()
-                        .get(0);
-        internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_ExtraEntry_fieldAccessorTable =
-                new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
-                        internal_static_im_turms_proto_QueryResourceDownloadInfoRequest_ExtraEntry_descriptor,
-                        new java.lang.String[]{"Key", "Value",});
+                        new java.lang.String[]{"Type", "IdNum", "IdStr", "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
         im.turms.server.common.access.client.dto.constant.StorageResourceTypeOuterClass
                 .getDescriptor();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
