@@ -26,7 +26,7 @@ public final class QueryNearbyUsersRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryNearbyUsersRequestOuterClass.class.getName());
     }
@@ -48,22 +48,26 @@ public final class QueryNearbyUsersRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n-request/user/query_nearby_users_reques"
-                + "t.proto\022\016im.turms.proto\"\242\002\n\027QueryNearbyU"
-                + "sersRequest\022\020\n\010latitude\030\001 \001(\002\022\021\n\tlongitu"
-                + "de\030\002 \001(\002\022\026\n\tmax_count\030\003 \001(\005H\000\210\001\001\022\031\n\014max_"
-                + "distance\030\004 \001(\005H\001\210\001\001\022\035\n\020with_coordinates\030"
-                + "\005 \001(\010H\002\210\001\001\022\032\n\rwith_distance\030\006 \001(\010H\003\210\001\001\022\033"
-                + "\n\016with_user_info\030\007 \001(\010H\004\210\001\001B\014\n\n_max_coun"
-                + "tB\017\n\r_max_distanceB\023\n\021_with_coordinatesB"
-                + "\020\n\016_with_distanceB\021\n\017_with_user_infoB<\n5"
-                + "im.turms.server.common.access.client.dto"
-                + ".request.userP\001\272\002\000b\006proto3"};
+                + "t.proto\022\016im.turms.proto\032\030model/common/va"
+                + "lue.proto\"\324\002\n\027QueryNearbyUsersRequest\022\020\n"
+                + "\010latitude\030\001 \001(\002\022\021\n\tlongitude\030\002 \001(\002\022\026\n\tma"
+                + "x_count\030\003 \001(\005H\000\210\001\001\022\031\n\014max_distance\030\004 \001(\005"
+                + "H\001\210\001\001\022\035\n\020with_coordinates\030\005 \001(\010H\002\210\001\001\022\032\n\r"
+                + "with_distance\030\006 \001(\010H\003\210\001\001\022\033\n\016with_user_in"
+                + "fo\030\007 \001(\010H\004\210\001\001\0220\n\021custom_attributes\030\017 \003(\013"
+                + "2\025.im.turms.proto.ValueB\014\n\n_max_countB\017\n"
+                + "\r_max_distanceB\023\n\021_with_coordinatesB\020\n\016_"
+                + "with_distanceB\021\n\017_with_user_infoB<\n5im.t"
+                + "urms.server.common.access.client.dto.req"
+                + "uest.userP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_QueryNearbyUsersRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryNearbyUsersRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryNearbyUsersRequest_descriptor,
@@ -73,8 +77,10 @@ public final class QueryNearbyUsersRequestOuterClass {
                                 "MaxDistance",
                                 "WithCoordinates",
                                 "WithDistance",
-                                "WithUserInfo",});
+                                "WithUserInfo",
+                                "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
