@@ -26,7 +26,7 @@ public final class QueryUserOnlineStatusesRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 QueryUserOnlineStatusesRequestOuterClass.class.getName());
     }
@@ -48,21 +48,26 @@ public final class QueryUserOnlineStatusesRequestOuterClass {
     private static final com.google.protobuf.Descriptors.FileDescriptor descriptor;
     static {
         java.lang.String[] descriptorData = {"\n5request/user/query_user_online_statuse"
-                + "s_request.proto\022\016im.turms.proto\"2\n\036Query"
-                + "UserOnlineStatusesRequest\022\020\n\010user_ids\030\001 "
-                + "\003(\003B<\n5im.turms.server.common.access.cli"
-                + "ent.dto.request.userP\001\272\002\000b\006proto3"};
+                + "s_request.proto\022\016im.turms.proto\032\030model/c"
+                + "ommon/value.proto\"d\n\036QueryUserOnlineStat"
+                + "usesRequest\022\020\n\010user_ids\030\001 \003(\003\0220\n\021custom_"
+                + "attributes\030\017 \003(\0132\025.im.turms.proto.ValueB"
+                + "<\n5im.turms.server.common.access.client."
+                + "dto.request.userP\001\272\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_QueryUserOnlineStatusesRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_QueryUserOnlineStatusesRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_QueryUserOnlineStatusesRequest_descriptor,
-                        new java.lang.String[]{"UserIds",});
+                        new java.lang.String[]{"UserIds", "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
