@@ -26,7 +26,7 @@ public final class CreateRelationshipGroupRequestOuterClass {
                 com.google.protobuf.RuntimeVersion.RuntimeDomain.PUBLIC,
                 /* major= */ 4,
                 /* minor= */ 27,
-                /* patch= */ 0,
+                /* patch= */ 2,
                 /* suffix= */ "",
                 CreateRelationshipGroupRequestOuterClass.class.getName());
     }
@@ -49,21 +49,26 @@ public final class CreateRelationshipGroupRequestOuterClass {
     static {
         java.lang.String[] descriptorData = {"\nArequest/user/relationship/create_relat"
                 + "ionship_group_request.proto\022\016im.turms.pr"
-                + "oto\".\n\036CreateRelationshipGroupRequest\022\014\n"
-                + "\004name\030\001 \001(\tBI\nBim.turms.server.common.ac"
-                + "cess.client.dto.request.user.relationshi"
-                + "pP\001\272\002\000b\006proto3"};
+                + "oto\032\030model/common/value.proto\"`\n\036CreateR"
+                + "elationshipGroupRequest\022\014\n\004name\030\001 \001(\t\0220\n"
+                + "\021custom_attributes\030\017 \003(\0132\025.im.turms.prot"
+                + "o.ValueBI\nBim.turms.server.common.access"
+                + ".client.dto.request.user.relationshipP\001\272"
+                + "\002\000b\006proto3"};
         descriptor = com.google.protobuf.Descriptors.FileDescriptor.internalBuildGeneratedFileFrom(
                 descriptorData,
-                new com.google.protobuf.Descriptors.FileDescriptor[]{});
+                new com.google.protobuf.Descriptors.FileDescriptor[]{
+                        im.turms.server.common.access.client.dto.model.common.ValueOuterClass
+                                .getDescriptor(),});
         internal_static_im_turms_proto_CreateRelationshipGroupRequest_descriptor =
                 getDescriptor().getMessageTypes()
-                        .get(0);
+                        .getFirst();
         internal_static_im_turms_proto_CreateRelationshipGroupRequest_fieldAccessorTable =
                 new com.google.protobuf.GeneratedMessage.FieldAccessorTable(
                         internal_static_im_turms_proto_CreateRelationshipGroupRequest_descriptor,
-                        new java.lang.String[]{"Name",});
+                        new java.lang.String[]{"Name", "CustomAttributes",});
         descriptor.resolveAllFeaturesImmutable();
+        im.turms.server.common.access.client.dto.model.common.ValueOuterClass.getDescriptor();
     }
 
     // @@protoc_insertion_point(outer_class_scope)
